update dependencies and cleanup warnings and deprecations